[project]
name = "daily-papers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "ddgs>=9.6.0",
    "dotenv>=0.9.9",
    "litellm>=1.77.4",
    "markdownify>=1.2.0",
    "pypdf>=6.1.0",
    "requests>=2.32.5",
    "smolagents>=1.22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
